--- a/menu/info.html
+++ b/menu/info.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined">
     <title>PokéDEX</title>
 </head>
-<body class="background__container__pool"> 
-     <header>
+<body > 
+    <header>
         <nav class="header__nav" >
             <section class="nav bg-white">
                 <div class="nav__bar">
@@ -80,47 +80,47 @@
                         <button onclick="document.getElementById('walle').style.display='block'" class="nav__bar__wallet__button bg-blue">Connect Wallet</button>
                     </div>
                 </div>
-    
             </section>
-         </nav>
-         <section class="header__nav__mobile">
+        </nav>
+
+        <section class="header__nav__mobile">
                                    <!--Navbar mobile-->
                 <article class="mobile">
-                <div class="nav__mobile bg-white">
-                    <a href="./exchange.html" class="nav__mobile__container blue">
-                        <span class="material-icons-outlined">
-                            currency_exchange
-                            </span>
-                        <div class="nav__mobile__container__text">Trade</div>
-                    </a>
-                    <a href="./farm.html" class="nav__mobile__container">
-                        <span class="material-icons-outlined">
-                            agriculture
-                            </span>
-                        <div class="nav__mobile__container__text">Farms</div>
-                    </a>
-                    <a href="./pool.html" class="nav__mobile__container">
-                        <span class="material-icons-outlined">
-                            pool
-                            </span>
-                        <div class="nav__mobile__container__text">Pools</div>
-                    </a>
-                    <a href="./nft.html" class="nav__mobile__container">
-                        <span class="material-icons-outlined">
-                            catching_pokemon
-                            </span>
-                        <div class="nav__mobile__container__text">NFT</div>
-                    </a>
-                    <a href="./info.html" class="nav__mobile__container">
-                        <span class="material-icons-outlined">
-                            more_horiz
-                            </span>
-                        <div class="nav__mobile__container__text">Info</div>
-                    </a>
-                </div>
+                    <div class="nav__mobile bg-white">
+                        <a href="./exchange.html" class="nav__mobile__container blue">
+                            <span class="material-icons-outlined">
+                                currency_exchange
+                                </span>
+                            <div class="nav__mobile__container__text">Trade</div>
+                        </a>
+                        <a href="./farm.html" class="nav__mobile__container">
+                            <span class="material-icons-outlined">
+                                agriculture
+                                </span>
+                            <div class="nav__mobile__container__text">Farms</div>
+                        </a>
+                        <a href="./pool.html" class="nav__mobile__container">
+                            <span class="material-icons-outlined">
+                                pool
+                                </span>
+                            <div class="nav__mobile__container__text">Pools</div>
+                        </a>
+                        <a href="./nft.html" class="nav__mobile__container">
+                            <span class="material-icons-outlined">
+                                catching_pokemon
+                                </span>
+                            <div class="nav__mobile__container__text">NFT</div>
+                        </a>
+                        <a href="./info.html" class="nav__mobile__container">
+                            <span class="material-icons-outlined">
+                                more_horiz
+                                </span>
+                            <div class="nav__mobile__container__text">Info</div>
+                        </a>
+                    </div>
                 </article>
-         </section>
-     </header>
+        </section>
+    </header>
 
     <!--Wallet-->
     <section class="wallet" id="walle" >
@@ -159,9 +159,48 @@
             </div>
            </div>
         </article>
-     </section>
+    </section>
 
-     <img src="../img/torre.png" alt="" >
+    <main class="flex flex background__container__info">
+        <img src="../img/torre.png" alt="" >
+        <section class="info ">
+            <h1>Info</h1>
+            <article>
+                <h2>Swapping/Trading</h2>
+                <p>PancakeSwap permite a los usuarios operar sin la necesidad de pasar por un exchange centralizado.
+                Todo lo que haces en PancakeSwap se enruta directamente a través de tu propia billetera, ¡no hay necesidad de confiar en otra persona tus criptomonedas!
+                </p>
+            </article>
+            <article>
+                <h2>Liquidity Pools</h2>
+                <p>You can only swap tokens on PancakeSwap if there is enough liquidity for those tokens. 
+                    If nobody has added much liquidity for the token or tokens you want to swap, it will be difficult, expensive, or impossible to do so.
+                    Providing liquidity will get you LP Tokens, which will earn you rewards in the form of trading fees for making sure there's always liquidity for the exchange to use.
+                </p>
+            </article>
+            <article>
+                <h2>Yield Farming</h2>
+                <p>Yield farming lets users that are providing liquidity earn CAKE rewards by locking
+                 their LP tokens into a smart contract. The incentive is to balance out the risk of impermanent loss that comes along with locking in your liquidity.
+                </p>
+            </article>
+            <article>
+                <h2>What are Syrup Pools?</h2>
+                <p>
+                    Syrup Pools are the easiest way to earn free tokens on PancakeSwap. Stake CAKE, earn free tokens.
+                    It really is that easy. Some special pools allow you to stake other tokens besides CAKE!
+                </p>
+            </article>
+            <article>
+                <h2>Swapping/Trading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nesciunt quo numquam veritatis provident. Quo delectus iusto nostrum pariatur quod sapiente officiis eveniet maiores provident? Ad distinctio aut molestias maxime?</p>
+            </article>
+            <article>
+                <h2>Swapping/Trading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod nesciunt quo numquam veritatis provident. Quo delectus iusto nostrum pariatur quod sapiente officiis eveniet maiores provident? Ad distinctio aut molestias maxime?</p>
+            </article>
+        </section>
+    </main>
 
 
 </body>
