--- a/menu/exchange.html
+++ b/menu/exchange.html
@@ -239,21 +239,54 @@
         </div>
         <img src="../img/charizard-help.png" alt="charizard help" class="help__img">
     </div>
-    <footer class="footer__none bg-red">    
+    <!--Footer-->
+    <footer class=" bg-red">    
         <section class="footer">
-            <a href="../index.html" class="footer__a" >
-                <img src="../img/PokeDEX.png" alt="" class="footer__a__img" >
-            </a>
-            <div class="footer__strategic">
-                <h3 class="footer__strategic__text">Strategic Partner</h3>
-                <img src="../img/CoderHouse.png" alt=""  class="footer__strategic__img">
-            </div>
-            <div class="footer__social">
-                <h3 class="footer__social__text">Social</h3>
-                <div class="">
+            <article>
+                <div>
+                    <ul>
+                        <li><h2>Menu</h2></li>
+                        <li><a href="./exchange.html">Exchange</a></li>
+                        <li><a href="./liquidity.html">Liquidity</a></li>
+                        <li><a href="./pool.html">Pools</a></li>
+                        <li><a href="./farm.html">Farms</a></li>
+                        <li><a href="./nft.html">NFT</a></li>
+                    </ul>
                 </div>
-            </div>
+                <div>
+                    <ul class="footer__li">
+                        <li><h2>Strategic Partners</h2></li>
+                        <li><img src="../img/CoderHouse.png" alt="" class="footer__img__2"></li>
+                        <li><img src="../img/CoderHouse.png" alt="" class="footer__img__2"></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><h2>Developers</h2></li>
+                        <li><a href="">Github</a></li>
+                        <li><a href="">Documentación</a></li>
+                        <li><a href="">Bug Bounty</a></li>
+                        <li><a href="">Audits</a></li>
+                    </ul>
+                </div>
+                <img src="../img/PokeDEX.png" alt="" class="footer__img">
+            </article>
+            <article class="footer__social">
+                <div>
+                    <span class="material-icons-outlined wp">
+                        whatsapp
+                    </span>
+                    <span class="material-icons-outlined">
+                        smartphone
+                    </span>
+                    <span class="material-icons-outlined">
+                        email
+                    </span>
+                    <img src="../img/logo-git-hub.png" alt="" class="footer__social__img">
+                </div>
+            </article>
         </section>
     </footer>
+    
 </body> 
 </html>
