terminando curso css

--- a/menu/farm.html
+++ b/menu/farm.html
@@ -19,7 +19,7 @@
             <section class="nav bg-white">
                 <div class="nav__bar">
                     <div >
-                        <a href="../Index.html" class="nav__bar__logo">
+                        <a href="../index.html" class="nav__bar__logo">
                             <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
                             <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
@@ -87,13 +87,13 @@
                                    <!--Navbar mobile-->
                 <article class="mobile">
                 <div class="nav__mobile bg-white">
-                    <a href="./exchange.html" class="nav__mobile__container green">
+                    <a href="./exchange.html" class="nav__mobile__container ">
                         <span class="material-icons-outlined">
                             currency_exchange
                             </span>
                         <div class="nav__mobile__container__text">Trade</div>
                     </a>
-                    <a href="./farm.html" class="nav__mobile__container">
+                    <a href="./farm.html" class="nav__mobile__container green">
                         <span class="material-icons-outlined">
                             agriculture
                             </span>
