--- a/menu/info.html
+++ b/menu/info.html
@@ -19,7 +19,7 @@
             <section class="nav bg-white">
                 <div class="nav__bar">
                     <div >
-                        <a href="../Index.html" class="nav__bar__logo">
+                        <a href="../index.html" class="nav__bar__logo">
                             <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
                             <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="nav__bar__trade nav__bar__trade__on " >
                         <div class="nav__bar__hover">
-                            <a href="./farm.html" class="nav__bar__hover__link blue">Earn</a>
+                            <a href="./farm.html" class="nav__bar__hover__link ">Earn</a>
                         </div>
                         <div class="nav__bar__dropdown">
                             <div class="nav__bar__dropdown__div__top">
@@ -54,7 +54,7 @@
                         <div class="nav__bar__hover"><a href="./nft.html" style="text-decoration: none; color: black;">NFTs</a></div>
                     </div>
                     <div class="nav__bar__info"> 
-                        <div class="nav__bar__hover"><a href="./info.html" style="text-decoration: none; color: black;">info</a></div>
+                        <div class="nav__bar__hover "><a href="./info.html" style="text-decoration: none; color: black;" class="blue">info</a></div>
                     </div>
                 </div>
                 <div class="nav__bar">
@@ -161,7 +161,7 @@
         </article>
     </section>
 
-    <main class="flex flex background__container__info">
+    <main class="flex background__container__info">
         <img src="../img/torre.png" alt="" >
         <section class="info ">
             <h1>Info</h1>
