--- a/menu/liquidity.html
+++ b/menu/liquidity.html
@@ -19,7 +19,7 @@
             <section class="nav bg-white">
                 <div class="nav__bar">
                     <div >
-                        <a href="../Index.html" class="nav__bar__logo">
+                        <a href="../index.html" class="nav__bar__logo">
                             <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
                             <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
@@ -195,6 +195,7 @@
             </div>
         </article>
      </section>
+     <br>
      <div class="liquidity__pikachu__trader">
          <a href="./info.html" class="liquidity__pikachu__trader__globo" >
              <img src="../img/globo.png" alt="" class="liquidity__pikachu__trader__globo__img" >
