--- a/menu/nft.html
+++ b/menu/nft.html
@@ -31,7 +31,7 @@
                 <a href="./lands.html" class="recuadro__opt__lands">Lands</a>
             </div>
             <div>
-                <a href="" class="recuadro__opt__mint">Mint a NFT</a>
+                <a href="./mint.html" class="recuadro__opt__mint">Mint a NFT</a>
             </div>
         </div>
     </div>
