--- a/menu/pool.html
+++ b/menu/pool.html
@@ -14,12 +14,12 @@
     <title>PokéDEX</title>
 </head>
 <body class="background__container__pool"> 
-     <header>
+    <header>
         <nav class="header__nav" >
             <section class="nav bg-white">
                 <div class="nav__bar">
                     <div >
-                        <a href="../Index.html" class="nav__bar__logo" >
+                        <a href="../index.html" class="nav__bar__logo" >
                             <img src="../img/pokebola.png" alt="" class="nav__bar__logo__img">
                             <div class="nav__bar__logo__pokedex">PokéDEX</div>
                         </a>
@@ -86,7 +86,7 @@
                                    <!--Navbar mobile-->
                 <article class="mobile">
                 <div class="nav__mobile bg-white">
-                    <a href="./exchange.html" class="nav__mobile__container blue">
+                    <a href="./exchange.html" class="nav__mobile__container ">
                         <span class="material-icons-outlined">
                             currency_exchange
                             </span>
@@ -98,7 +98,7 @@
                             </span>
                         <div class="nav__mobile__container__text">Farms</div>
                     </a>
-                    <a href="./pool.html" class="nav__mobile__container">
+                    <a href="./pool.html" class="nav__mobile__container blue">
                         <span class="material-icons-outlined">
                             pool
                             </span>
@@ -118,7 +118,89 @@
                     </a>
                 </div>
                 </article>
-         </section>
+        </section>
+        <section class="sidebar" id="mySidebar">
+            <div class="sidebar__container">
+                <div class="sidebar__container__titulo flex">
+                    <a href="../index.html" class="nav__bar__logo">
+                        <img src="../img/pokebola.png" alt="Logo" class="nav__bar__logo__img">
+                    </a>
+                    <h1>PokeDEX</h1>
+                </div>
+                <div class="sidebar__container__list">
+                    <ul>
+                        <li >
+                            <a href="./index.html">
+                                <span class="material-icons-outlined">
+                                    home
+                            </span>
+                            <span>Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./exchange.html">
+                                <span class="material-icons-outlined">
+                                    currency_exchange
+                                </span>
+                                <span>Exchange</span>
+                            </a>
+                        </li>
+                        <li style="border-left: 4px yellow solid;">
+                            <a href="./liquidity.html">
+                                <span class="material-icons-outlined">
+                                    paid
+                                </span>
+                                <span>Liquidity</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./farm.html">
+                                <span class="material-icons-outlined">
+                                    agriculture
+                                </span>
+                                <span>Farm</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./pool.html">
+                                <span class="material-icons-outlined">
+                                    pool
+                                </span>
+                                <span>Pools</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./nft.html">
+                                <span class="material-icons-outlined">
+                                    catching_pokemon
+                                </span>
+                                <span>NFT</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./info.html">
+                                <span class="material-icons-outlined">
+                                    info
+                                </span>
+                                <span>Info</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="sidebar__container__social">
+                    <span class="material-icons-outlined">
+                        whatsapp
+                    </span>
+                    <span class="material-icons-outlined">
+                        smartphone
+                    </span>
+                    <span class="material-icons-outlined">
+                        email
+                    </span>
+                    <img src="../img/logo-git-hub.png" alt="" style="height: 2.5rem;">
+                </div>
+            </div>
+        </section>
      </header>
      <article class="subnav bg-white" style="margin-top: 0;">
         <h2 class="subnav__h2" ><a href="./farm.html" class="subnav__link   subnav__link__on ">Farms</a></h2>
