--- a/index.html
+++ b/index.html
@@ -93,44 +93,7 @@
             </div>
         </article>
     </section>
-    <!--Diseño mobile-->
-    <section class="header__nav__mobile">
-            <!--Navbar mobile-->
-        <article class="mobile">
-            <div class="nav__mobile bg-white">
-            <a href="./exchange.html" class="nav__mobile__container red">
-            <span class="material-icons-outlined">
-                currency_exchange
-                </span>
-            <div class="nav__mobile__container__text">Trade</div>
-            </a>
-            <a href="./farm.html" class="nav__mobile__container">
-            <span class="material-icons-outlined">
-                agriculture
-                </span>
-            <div class="nav__mobile__container__text">Farms</div>
-            </a>
-            <a href="./pool.html" class="nav__mobile__container">
-            <span class="material-icons-outlined">
-                pool
-                </span>
-            <div class="nav__mobile__container__text">Pools</div>
-            </a>
-            <a href="./nft.html" class="nav__mobile__container">
-            <span class="material-icons-outlined">
-                catching_pokemon
-                </span>
-            <div class="nav__mobile__container__text">NFT</div>
-            </a>
-            <a href="./info.html" class="nav__mobile__container">
-            <span class="material-icons-outlined">
-                more_horiz
-                </span>
-            <div class="nav__mobile__container__text">Info</div>
-            </a>
-            </div>
-        </article>
-    </section>
+    
     <!--Sidebar-->
     <section class="sidebar__home" id="mySidebar">
         <div class="sidebar__home__container">
@@ -226,6 +189,19 @@
             }
         }
     </script>
+    <!--Diseño mobile-->
+    <section class="mobile__block">
+        <article class="mobile__index">
+            <div><img src="img/pika-trader.jpg" alt=""></div>
+            <h1>The moon is made of pancakes.</h1>
+            <h2>Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.</h2>
+            <article>
+                <button class="btn__1">Connect Wallet</button>
+                <button class="btn__2">Trade Now</button>
+            </article>
+
+        </article>
+    </section>
     <!-- script Carrusel-->
     <script>
         let slideIndex = 1;
